@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # libtool - Provide generalized library-building support services.
-# Generated automatically by config.status (fastbit) ibis1.1.5.2
+# Generated automatically by config.status (fastbit) ibis1.1.5.3
 # Libtool was configured on host bit:
 # NOTE: Changes made to this file will be lost: look at ltmain.sh.
 #
